
---------------
	- mandoc lint fixes

Wed Apr  4 01:06:05 UTC 2018
---------------
	- 2.83.0beta1 (yes, jump from 2.82.3betas)
	- fix stray stuff in vimdiff prompt
	- sort .new files list from looknew() (thanks to Eduard Rozenberg)
	- make sure user is aware of kernel update (require keypress)
	- respect $ROOT in looknew() (thanks to burdi01 on LQ)
	- inform user that the warning about a -current mirror
	  only occurs once, and also point the location of the
	  file to remove if they want the warning back
	- don't offer to run lilo if initrd is in lilo.conf

Sat Jan  6 23:54:27 UTC 2018
---------------
	- 2.82.3beta5
	- minor tweaks to slack-desc
	- check for existence of /etc/lilo.conf too before offering
	  to run lilo after kernel upgrades
	- make sure user actually wants to run lilo (fix answer
	  handling)
	- warn user and require confirmation the first time a -current
	  mirror is selected (thanks to Didier Spaier)
	- improve handling of SOURCE from /etc/slackpkg/mirrors; e.g.
	  don't fail if trailing slash is accidentally omitted
	  (thanks to Didier Spaier)

Fri Jan  5 03:24:31 UTC 2018
---------------
	- 2.82.3beta4
        - Abort if system date is near epoch (needed on ARM)

Tue Jan  2 22:24:50 CST 2018
---------------
	- 2.82.3beta3
	- included some more fixups for respecting $ROOT
	  (thanks to burdi01 on LQ)
	- use correct GPG key for Slackware ARM
	- update sample mirror list for Slackware ARM

Thu Nov  9 04:03:07 UTC 2017
---------------
	- 2.82.3beta2
	- Fix error in patch application for vimdiff addition
	  (thanks to David Allen)

Wed Nov  8 00:45:00 UTC 2017
---------------
	- 2.82.3beta1
	- Add an option to use vimdiff for comparing changes in .new files
	  (thanks to David Allen)

Sun Oct 10  07:48:13 UTC 2017
---------------
	- Updated mirrors-x86*.sample to remove dead mirrors and clarify
	  intent to use mirrors.slackware.com
	- Updated mirrors-arm.sample to sync with mozes' copy