@@ -1,5 +1,6 @@
 
 ---------------
+	- tweak handling of new kernel prompts
 	- mandoc lint fixes
 
 Wed Apr  4 01:06:05 UTC 2018
